--- a/preamble.tex
+++ b/preamble.tex
@@ -100,6 +100,7 @@
 \newcommand{\hh}{\boldsymbol{h}}
 \newcommand{\mm}{\boldsymbol{m}}
 \newcommand{\aaa}{\boldsymbol{a}}
+\newcommand{\FF}{\boldsymbol{F}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Official TUM colors
