deepspeed usage chapter

--- a/content/implementation/cpu_offloading.tex
+++ b/content/implementation/cpu_offloading.tex
@@ -1,4 +1,5 @@
 \subsection{Offloading Optimizations}
+\label{subsection:offloading}
 
 To further reduce GPU memory usage, Deepspeed contains optimizations to offload 
 data and compute from the GPU to CPU or even Non-Volatile Memory express (NVMe) 
