deepspeed usage chapter

--- a/content/implementation/general.tex
+++ b/content/implementation/general.tex
@@ -28,13 +28,21 @@ self.model, self.optimizer, _, _ = deepspeed.initialize(
                 )
 \end{python}
 
-Deepspeed provides a model and optimizer wrapper, offering the same PyTorch API as 
-before, but performs optimizations under the hood when forward, backward and steps 
+Deepspeed provides a model and optimizer wrapper to offer the same PyTorch API as 
+before, but performs optimizations under the hood when forward, backward and step 
 functions are invoked. Furthermore, we had to replace the original distributed 
 environment setup with Deepspeeds distributed setup, which particulary useful for 
 Deepspeed to spawn CPU worker processes for optimizer or parameter offloading. We 
-will dive deeper into this optimization in Section \ref*{subsection:offloading}.
+will dive deeper into this optimization in Section~\ref{subsection:offloading}.
 
+To enable or disable specific feature of the optimizer engine, Deepspeed is 
+configured using an extra JSON file. We extended the previous OCP configuration 
+code to handle the deepspeed config as additional argument and pass it through 
+to the Deepspeed engine at the beginning of training. This also allows us to 
+make feature specific changes to codebase, since we also parse the config and 
+make it available at runtime.
+
+An example Deepspeed configuration file looks like this:
 
 \begin{json}
 {
@@ -53,3 +61,16 @@ will dive deeper into this optimization in Section \ref*{subsection:offloading}.
     }
 }
 \end{json}
+
+In this configuration, \textit{train\_micro\_batch\_size\_per\_gpu} refers to the 
+batch size processing by one GPU in one step. \textit{gradient\_accumulation\_steps} 
+refers to the number of steps to accumulate gradients before averaging and applying 
+them. \textit{train\_batch\_size} is the effective batch size per accumulation step, 
+so total number of GPUs $\times$ \textit{train\_micro\_batch\_size\_per\_gpu} $\times$ 
+\textit{gradient\_accumulation\_steps}. 
+
+We introduce the other configurations in later sections. \textit{fp16} and 
+\textit{bf16} are mixed-precision configurations and are explained in Section~
+\ref{subsection:mixedprecision}. All configurations in \textit{zero\_optimization} 
+are introduced in Section~\ref{subsection:zero} and amended in Section~
+\ref{subsection:offloading} by offload features.
