--- a/content/implementation/mixed_precision.tex
+++ b/content/implementation/mixed_precision.tex
@@ -1,4 +1,5 @@
 \subsection{Mixed Precision Training}
+\label{subsection:mixedprecision}
 
 Mixed precision training uses lower bit floating point types for optimizer states, gradients and model parameters to 
 reduce the memory footprint during model training. 
