--- a/content/implementation/zero.tex
+++ b/content/implementation/zero.tex
@@ -1,4 +1,5 @@
 \subsection{Zero Redundancy Optimizer (ZeRO)}
+\label{subsection:zero}
 
 The Zero Redundancy Optimizer (ZeRO) is a scaling engine on top of data-parallel training for 
 machine learning models. In short, ZeRO removes memory redundancies by partitioning states which 
