Make preliminaries shorter

--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -29,8 +29,8 @@ for large transformer models and, to the best of our knowledge, never applied to
 
 In our work, we forked the OCP project to integrate DeepSpeed into the training pipeline of the most widely-used 
 and successful models in energy and force predicition of catalysts. 
-We benchmark our approach by evaluating the epoch runtime and memory usage of the GNN architectures Gemnet, Gemnet-OC, 
-DimeNet++ and CGCNN using different configurations of DeepSpeed on the OC20 dataset.
+We benchmark our approach by evaluating the epoch runtime and memory usage of the GNN architectures GemN+et and 
+DimeNet++ using different configurations of DeepSpeed on the OC20 dataset.
 
 
 \subsection{Contributions}
