--- a/figures/gnns/gn_block.tex
+++ b/figures/gnns/gn_block.tex
@@ -157,7 +157,7 @@
     \captionsetup{width=\dimexpr\textwidth-1.5cm\relax}
     \caption{Schematic depiction of the GN block computation phases. 
     \textcolor{tum-orange}{Orange} attributes are updated or created 
-    while \textcolor{tum-dark-blue}{blue} ones contribute to the corresponding 
+    while \textcolor{tum-dark-blue}{blue} ones contribute to the 
     update.}
 
 \end{figure}
